--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -368,28 +368,38 @@ Who We Are beginning
                             <div class = "row">
                                 <blockquote class="blockquote text-white col col-lg-7">One of the events our club is competing in is the Biotechnology Design. The event’s topic is Food, leading the group of students to focus on a biological disease that is killing a huge proportion of food in Eastern Africa. Their solution: Find a bacteria to reverse the effect of MLND, the disease affecting the crops, on the DNA of the crop. This event focuses on solutions to the growing food epidemic across different parts of the world, and how new technology can help to reverse the problem and provide support to the people around the world experiencing the dilemma.
                                 </blockquote>
-                                <img class = "col col-lg-5" src = "./img/bubbles.jpg">
-                            </div>
-                        </div>
-                        <div class="testimonials-single">
-                            <h3 class = "text-white">Software Development</h3>
-                            <br>
-                            <div class = "row">
-                            <blockquote class="blockquote text-white col col-lg-7">One of our software development groups is attempting to solve the problem of food wastage at restaurants. They developed a platform to allow restaurants to sell their otherwise unsold food at cheaper prices, driving customer volume AND selling food that would have otherwise been thrown out. They created a web dashboard for the restaurants, a mobile app for customers, and even an Amazon Alexa skill for convenience.
-                            </blockquote>
-                            <img class = "col col-lg-5" src = "./img/bubbles.jpg">
+                                <img class = "col col-lg-5" style="height:290px" src = "./img/biotechnology.jpg">
                             </div>
                         </div>
                         <div class="testimonials-single">
                             <h3 class = "text-white">Video Game Design</h3>
                             <br>
+                            <div class = "row">
+                            <blockquote class="blockquote text-white col col-lg-7">The video game design group was challenged to create a sports theme game. They used the Unity engine to create a car racing game.
+                            </blockquote>
+                            <img class = "col col-lg-5" style="height:290px"  src = "./img/videogame.jpg">
+                            </div>
+                        </div>
+                        <div class="testimonials-single">
+                            <h3 class = "text-white">Children's Stories</h3>
+                            <br>
                             <div class="row">
                             <blockquote class="blockquote text-white col col-lg-7">
-                                The video game design group was challenged to create a sports theme game. They used the Unity engine to create a car racing game.
+                            This year, the challenge for TSA's Children Stories event was to create an electronically enhanced storybook. This team took this challenge head on.
                             </blockquote>
-                                <img class = "col col-lg-5" src = "./img/bubbles.jpg">
+                                <img class = "col col-lg-5" style="height:290px"  src = "./img/childrens-stories.jpg">
                         </div>
                             </div>
+                            <div class="testimonials-single">
+                                    <h3 class = "text-white">Digital Video Production</h3>
+                                    <br>
+                                    <div class = "row">
+                                    <blockquote class="blockquote text-white col col-lg-7">
+                                        This group created an informercial for the TSA Children's Stories event. They incorporated VFX to complement their cinematography.
+                                    </blockquote>
+                                    <img class = "col col-lg-5" style="height:290px"  src = "./img/digital-production.jpg">
+                                    </div>
+                                </div>
                     </div>
 
                 </div>
