fixed extra spaces

--- a/design-brief.html
+++ b/design-brief.html
@@ -277,6 +277,7 @@
                         <a href="#demo" class="btn btn-primary">Try the Demo</a></div>
                 </div>
             </div>
+        </div>
     <!-- // end .section -->
 
 
@@ -348,7 +349,7 @@
 
 
     <!-- competitions open  -->
-    <div class = "section light-bg">
+    <div class = "section2 light-bg">
         <div class="section-title" id = "competitions">
             <h3 >General Uses of AI</h3>
         </div>
