--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -51,8 +51,10 @@
                                     <li class="nav-item"> <a class="nav-link" href="#student_projects">PROJECTS</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#officers">OFFICERS</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#competitions">COMPETITIONS</a> </li>
-                                    <li class="nav-item"><a href="./index.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">Career &amp; Tech</a></li>
+                                    <li class="nav-item"><a href="./index.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CTE</a></li>
                                     <li class="nav-item"><a href="./design-brief.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
+                                    <li class="nav-item"><a href="./about.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">ABOUT</a></li>
+
                                 </ul>
                             </div>
                         </nav>
