--- a/design-brief.html
+++ b/design-brief.html
@@ -25,7 +25,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
-        <link rel='stylesheet prefetch' href='https://unpkg.com/botui/build/botui.min.css'>
+        <link rel='stylesheet prefetch' href='css/botui.min.css'>
         <link rel='stylesheet prefetch' href='https://unpkg.com/botui/build/botui-theme-default.css'>
 
         <!-- Font -->
@@ -359,7 +359,7 @@
     <br>
 
         <script src='https://cdn.jsdelivr.net/vue/latest/vue.min.js'></script>
-        <script src='https://unpkg.com/botui/build/botui.min.js'></script>
+        <script src='js/botui.min.js'></script>
 
 
 
@@ -568,22 +568,24 @@
 
                                 <!-- Modal -->
                                 <div class="modal fade" id="watsonmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                ...
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                            </div>
+                                        <div class="modal-dialog" role="document">
+                                                <div class="modal-dialog" role="document">
+                                                        <div class="modal-content">
+                                                          <div class="modal-header">
+                                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                                X
+                                                            </button>
+                                                          </div>
+                                                          <div class="modal-body">
+                                                            ...
+                                                          </div>
+                                                          <div class="modal-footer">
+                                                            <button type="button" class="btn btn-primary">OK</button>
+                                                          </div>
+                                                        </div>
+                                                      </div>
                                         </div>
-                                    </div>
                                 </div>
                                 <!-- End Modal -->
                             </div>
@@ -606,22 +608,24 @@
 
                                 <!-- Modal -->
                                 <div class="modal fade" id="sirimodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                ....
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                            </div>
+                                        <div class="modal-dialog" role="document">
+                                                <div class="modal-dialog" role="document">
+                                                        <div class="modal-content">
+                                                          <div class="modal-header">
+                                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                                X
+                                                            </button>
+                                                          </div>
+                                                          <div class="modal-body">
+                                                            ...
+                                                          </div>
+                                                          <div class="modal-footer">
+                                                            <button type="button" class="btn btn-primary">OK</button>
+                                                          </div>
+                                                        </div>
+                                                      </div>
                                         </div>
-                                    </div>
                                 </div>
                                 <!-- End Modal -->
                             </div>
@@ -644,22 +648,22 @@
 
                                 <!-- Modal -->
                                 <div class="modal fade" id="aidamodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                ...
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                            </div>
-                                        </div>
-                                    </div>
+                                        <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                  <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                        X
+                                                    </button>
+                                                  </div>
+                                                  <div class="modal-body">
+                                                    ...
+                                                  </div>
+                                                  <div class="modal-footer">
+                                                    <button type="button" class="btn btn-primary">OK</button>
+                                                  </div>
+                                                </div>
+                                              </div>
                                 </div>
                                 <!-- End Modal -->
                             </div>
