--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -46,7 +46,7 @@
                             <div class="collapse navbar-collapse" id="navbar">
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#what_is_tsa">INTRODUCTION</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#what_is_tsa">ABOUT</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#activities">ACTIVITIES</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#student_projects">PROJECTS</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#officers">OFFICERS</a> </li>
