--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <script>
             window.onload = function() {
                 document.getElementById("firstCard").focus();
-                this.open_programming();
+                //this.open_programming();
                 document.getElementById("button").style.background='none';
                 document.getElementById("button").style.border='none';
                 document.getElementById("button").style.outline='none';
@@ -237,6 +237,7 @@
 
         </div>
 
+
         <section>
             <div id="cd-timeline-title"  class="section-title2">
                 <h3 id="timeline-section-title">Programming Sequence</h3>
@@ -254,10 +255,10 @@
                 </div> <!-- cd-timeline-img -->
                 
                     <div class="cd-timeline-content col col-lg-12">
-                        <h2 id = "timeline-card-title1">Title of section 1</h2>
-                        <p id = "timeline-card-p1" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                        <h2 id = "timeline-card-title1">Introduction to Computer Programming & Mobile App/Game Design</h2>
+                        <p id = "timeline-card-p1" >Offers an introduction to structured computer programming in Java then continues into the use of online compilers used for creating mobile applications and games. Topics include computer systems components, introduction to writing programs, using loops and logical operations and designing and writing programs in structured form using modular design. Students will apply communications and data analysis to the problem solving and decision making processes in a variety of life situations</p>
                         <a href="#0" class="cd-read-more">Read more</a>
-                        <span id ="timeline-card-grade1"class="cd-date">10th-11th Grade</span>
+                        <span id ="timeline-card-grade1"class="cd-date">Grade (9th-12th)</span>
                     </div> <!-- cd-timeline-content -->
                 </div>  <!-- cd-timeline-block -->
             </div>
@@ -269,10 +270,10 @@
                 </div> <!-- cd-timeline-img -->
 
                 <div class="cd-timeline-content col col-lg-12">
-                    <h2 id = "timeline-card-title2">Title of section 2</h2>
-                    <p id = "timeline-card-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+                    <h2 id = "timeline-card-title2">AP Computer Science A</h2>
+                    <p id = "timeline-card-p2">Offers a second year of study in program design using a structured programming language. Input and output techniques, functions, and use of classes and objects will be studied using Java. Develop and select appropriate algorithms and data structures to solve new problems. Write solutions fluently in an object-oriented paradigm. Write, run, test, and debug solutions in the Java programming language. Read and understand programs consisting of several classes and interacting objects. Read and understand a description of the design and development process leading to such a program. Understand the ethical and social implications of computer use</p>
                     <a href="#0" class="cd-read-more">Read more</a>
-                    <span id ="timeline-card-grade2" class="cd-date">Jan 18</span>
+                    <span id ="timeline-card-grade2" class="cd-date">Grade (10th-12th)</span>
                 </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
             </div>
@@ -283,10 +284,10 @@
                 </div> <!-- cd-timeline-img -->
 
                 <div class="cd-timeline-content col col-lg-12">
-                    <h2 id = "timeline-card-title3">Title of section 3</h2>
-                    <p id = "timeline-card-p3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+                    <h2 id = "timeline-card-title3">AP Computer Science Principles</h2>
+                    <p id = "timeline-card-p3">Describe connections between people and computing. Create a computational artifact with a practical, personal or societal intent. Use appropriate algorithmic and information technology principles. Identify abstractions and describe modeling in a computational context. Justify appropriateness and correctness of a solution, model or artifact. Describe computation with accurate and precise language, notations or visualizations. Share the workload by providing individual contributions to an overall collaborative effort.Offers a multidisciplinary approach to teaching the underlying principles of computation. The course will introduce students to the creative aspects of programming, abstractions, large data sets, the Internet, cybersecurity concerns, and computing impacts. AP Computer Science Principles will give students the opportunity to use technology to address real-world problems and build relevant solutions.</p>
                     <a href="#0" class="cd-read-more">Read more</a>
-                    <span id ="timeline-card-grade3" class="cd-date">Jan 24</span>
+                    <span id ="timeline-card-grade3" class="cd-date">Grade (10th-12th)</span>
                 </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
             </div>
@@ -297,10 +298,10 @@
                 </div> <!-- cd-timeline-img -->
 
                 <div class="cd-timeline-content col-lg-12">
-                    <h2 id = "timeline-card-title4">Title of section 4</h2>
-                    <p id = "timeline-card-p4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                    <h2 id = "timeline-card-title4">Advanced Topics in Computer Science Honors</h2>
+                    <p id = "timeline-card-p4">Strengthens base of object-oriented programming. Incorporates topics such as recursion, algorithm efficiency, data structures, sorting and searching, networking, graphical user interfaces, security, robotics, artificial intelligence, and parallel programming.</p>
                     <a href="#0" class="cd-read-more">Read more</a>
-                    <span id ="timeline-card-grade4" class="cd-date">Feb 14</span>
+                    <span id ="timeline-card-grade4" class="cd-date">Grade (11th-12th)</span>
                 </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
             </div>
@@ -310,9 +311,9 @@
 
         <div class="cards">
 
-            <div id="staff"  class="section-title">
+            <div id="staff"  class="section3-title">
                 <small>STAFF</small>
-                <h3><white>CTE Course Teachers</white></h3>
+                <h3>CTE Course Teachers</h3>
             </div>
 
             <div class="card">
