--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -370,7 +370,7 @@ Who We Are beginning
                             <div class = "row">
                                 <blockquote class="blockquote text-white col col-lg-7">One of the events our club is competing in is the Biotechnology Design. The event’s topic is Food, leading the group of students to focus on a biological disease that is killing a huge proportion of food in Eastern Africa. Their solution: Find a bacteria to reverse the effect of MLND, the disease affecting the crops, on the DNA of the crop. This event focuses on solutions to the growing food epidemic across different parts of the world, and how new technology can help to reverse the problem and provide support to the people around the world experiencing the dilemma.
                                 </blockquote>
-                                <img class = "col col-lg-5" style="height:290px" src = "./img/biotechnology.jpg">
+                                <img  class = "col col-lg-5" style="height:280px; width:auto;" src = "./img/biotechnology.jpg">
                             </div>
                         </div>
                         <div class="testimonials-single">
@@ -379,7 +379,7 @@ Who We Are beginning
                             <div class = "row">
                             <blockquote class="blockquote text-white col col-lg-7">The video game design group was challenged to create a sports theme game. They used the Unity engine to create a car racing game.
                             </blockquote>
-                            <img class = "col col-lg-5" style="height:290px"  src = "./img/videogame.jpg">
+                            <img class = "col col-lg-5" style="height:280px; width:auto;"  src = "./img/videogame.jpg">
                             </div>
                         </div>
                         <div class="testimonials-single">
@@ -389,7 +389,7 @@ Who We Are beginning
                             <blockquote class="blockquote text-white col col-lg-7">
                             This year, the challenge for TSA's Children Stories event was to create an electronically enhanced storybook. This team took this challenge head on.
                             </blockquote>
-                                <img class = "col col-lg-5" style="height:290px"  src = "./img/childrens-stories.jpg">
+                                <img class = "col col-lg-5" style="height:280px; width:auto;"  src = "./img/childrens-stories.jpg">
                         </div>
                             </div>
                             <div class="testimonials-single">
@@ -399,7 +399,7 @@ Who We Are beginning
                                     <blockquote class="blockquote text-white col col-lg-7">
                                         This group created an informercial for the TSA Children's Stories event. They incorporated VFX to complement their cinematography.
                                     </blockquote>
-                                    <img class = "col col-lg-5" style="height:290px"  src = "./img/digital-production.jpg">
+                                    <img class = "col col-lg-5" style="height:280px;width:auto;"  src = "./img/digital-production.jpg">
                                     </div>
                                 </div>
                     </div>
