--- a/design-brief.html
+++ b/design-brief.html
@@ -92,7 +92,7 @@
                         <div class="AIDA">
                             <img src="./img/aida-logo.png" alt="Smiley face" height="102" width="102">
                         </div>
-                        <div class="typewriter">
+                        <div class="typewriter centertypewriter">
                             <h3>Meet your virtual tutor. </h3>
                         </div>
                         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
