--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <link href='https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
         <script>
             window.onload = function() {
-                document.getElementById("firstCard").focus();
-                //this.open_programming();
+               document.getElementById("firstCard").style.background() = "";
+
                 document.getElementById("button").style.background='none';
                 document.getElementById("button").style.border='none';
                 document.getElementById("button").style.outline='none';
